--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@ footer {
 	border-top: 2px solid;
 	text-align: center;
 	font-size: 50%;
+	padding-top: 20px;
+	padding-bottom:20px;
 }
 .header {
 	top: 0;
