added pkmnmaxmsp.html & binaural objects
slight revision to height-layer.html
all links now open in a new tab instead of in the current tab.
updated audiothings.html to include binauralobjectsfeb24.html
updated journal.html to exclude categories not yet populated.

--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,12 @@ footer {
 	display: block;
 	text-align: center;
 }
+.hoverZoomImage {
+	background-position: 50% 50%;
+	position: relative;
+}
+.hoverZoomImage:hover {
+	transition: transform 0.2s ease-in-out;
+	transform: scale(1.2);
+	object-fit: none;
+}
