--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,16 @@ footer {
 .leftside {
 	flex: 1;
 	text-align: center;
+	padding-left: 5px;
 }
 .rightside {
 	flex: 1;
+	padding-right: 5px;
 }
 .rightsidecenter{
 	flex: 1;
 	text-align: center;
+	padding-right: 5px;
 }
 .flex-container {
 	display: flex;
