hrtf files update

--- a/aftw/aftw-final/styles.css
+++ b/aftw/aftw-final/styles.css
@@ -8,6 +8,11 @@
     justify-content: center;
     align-items: center;
 }
+.play-convolved {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .reset-dragged {
     display: flex;
     justify-content: center;
