--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@ html{
 }
 body {
 	margin: 1vmin;
+	display: block;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size:cover;
+	background-attachment: fixed;
 }
 body:before {
 	content: "";
@@ -20,6 +26,7 @@ body:before {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	background-attachment: fixed;
 }
 h1 {
 	font-size: 3.4vmin;
@@ -185,8 +192,9 @@ span {
 	display: none;
 	position: absolute;
 	background-color: #ddd;
-	min-width: 5vw;
+	min-width: 8vw;
 	z-index: 1;
+	text-align: left;
 }
 .dropdown-content a {
 	color: #575757;
@@ -195,6 +203,7 @@ span {
 	border-style: solid;
 	border-width: 0.2vmin;
 	border-color: black;
+	padding-left:0.2vw;
 }
 .dropdown-content a:hover {
 	background-color: white;
@@ -286,7 +295,7 @@ span {
 		margin-bottom: 0%;
 	}
 	footer {
-		font-size:2.5vw;
+		font-size:2.0vw;
 	}
 	.mobileCenterText {
 		text-align: center !important;
