--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,15 @@ span {
 
 }
 @media only screen and (max-width: 800px){
+	body::before {
+		content: '' !important;
+		position: fixed !important;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		z-index: -1;
+	}
 	.mobileHidden {
 		display: none;
 	}
