--- a/styles.css
+++ b/styles.css
@@ -241,6 +241,9 @@ ol {
 		flex-flow: column !important;
 		flex-direction: column;
 	}
+	.content {
+		padding-top: 4.5vmin;
+	}
 	.links {
 		font-size: 2.5vw !important;
 	}
